--- a/css/default.css
+++ b/css/default.css
@@ -5,50 +5,20 @@ html {
 	font-family: Roboto;
 }
 
-button {
-	border: 0;
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-
-}
-
-#main-menu{
-	display: flex;
-	justify-content: space-around;
-}
-
 .header-container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
 
-.clocks-container {
+.clock-container {
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	flex-wrap: wrap;
 	flex-grow: 4;
 }
 
-.logo-img {
-	height: 100px;
-	display: flex;
-}
-
-.logo-container {
-	display: flex;
-	align-items: center;
-	padding-right: 1em;
-	padding-left: 1em;
-}
-
-.time-description {
-	text-align: center;
-	padding-bottom: 20px;
-}
-
-#clock, #clockUTC {
+#clock {
 	font-size: 5em;
 	padding-left: 20px;
 	padding-right: 20px;
@@ -57,57 +27,43 @@ button {
 	justify-content: center;
 }
 
-.menu-option, .clock-ico {
-	padding-top: .5em;
-	padding-bottom: .5em;
-	padding-left: 1em;
-	padding-right: 1em;
-	font-size: 2em;
-	border: none;
+.pressure-container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
-#clock-ico {
-	width: 1em;
-	vertical-align: middle;
-	padding-right: .5em;
-}
-
-.header-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-	padding: 0;
-	margin: 0;
-}
-
-a {
+.pressure-input {
+	background-color: black;
+	border: solid 1px gray;
 	color: white;
-	text-decoration: none;
+	height: 2em;
+	text-align: center;
+	border-radius: .5em;
+	margin: 5px;
 }
 
-.wp-btn {
-	background: none;
-	border: none;
-	color: white;
+.save-container, .symptoms-container{
+	display: flex;
+	justify-content: center;
+	margin: 2em;
+	font-size: 120%;
 }
 
-.wp-ico {
-	height: 2.5em;	
-}
-
-.wp-div {
-	display: flex;	
-}
-
-#copy-message {
-	position: fixed; 
-	top: 0;
-	right: 0;
-	padding: 2em;
+#save {
 	background-color: green;
-	border-radius: 1em;
-	margin: 1em;
-	font-size: 1.2em;
-	font-weight: bold;
+	color: white;
+	border: solid 1px green;
+	border-radius: .5em;
+	height: 2em;
+	width: 10em;
+}
+
+#add-symptom {
+	background-color: blue;
+	color: white;
+	border: solid 1px 	blue;
+	border-radius: .5em;
+	height: 2em;
+	width: 20em;
 }
