--- a/css/reset.css
+++ b/css/reset.css
@@ -364,3 +364,10 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
